pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-233-block_quotes.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/233-block_quotes.md
---
[36m│[0m [3mbar[0m[3m baz[0m[3m foo[0m
