pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-234-block_quotes.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/234-block_quotes.md
---
[36m│[0m [3mfoo[0m

[32m════════════════════════════════════════════════════════════════════════════════[0m
